# hukuk-ai

./: .env.example  .gitignore  README.md  WAVE_STATE.md
api-gateway/: docker-compose.milvus.yml  docker-compose.yml  pyproject.toml
api-gateway/benchmarks/: guardrails_latency_bench.py
api-gateway/guardrails/: config.yml  prompts.yml  rails.co
api-gateway/src/: __init__.py  answer_contract_v2.py  config.py  faz2a_hardening.py  main.py  observability.py  release_controls.py  session_store.py  source_family_resolver.py  token_accounting.py
api-gateway/tests/: test_answer_contract_v2.py  test_answer_slots.py  test_article_first_chunks.py  test_chat_endpoint.py  test_chat_router.py  test_eval_runner.py  test_faz10_runtime_trace.py  test_faz2a_hardening.py  test_faz34_perimeter_proxy.py  test_faz5_rc_f_hardening.py  test_faz8_parity_trace.py  test_guardrails_bench_smoke.py  test_guardrails_config.py  test_guardrails_pipeline_smoke.py  test_judicial_corpus_prep.py  test_judicial_shadow_retrieval.py  test_legal_accuracy.py  test_legal_advisor_application_e2e.py  test_legal_rag_runtime_integration.py  test_llm_client.py  test_manifest_validator.py  test_milvus_smoke.py  test_milvus_smoke_integration.py  test_official_metadata.py  test_openai_api.py  test_orchestrator_smoke.py  test_phase22f_s7_teb_source_identity.py  test_phase22m_review_returns_guard.py  test_phase24hx_constrained_routing.py  test_phase24hy_replacement_guard.py  test_phase4_retrieval_modules.py  test_pii_release_proof.py  test_product_audit_access.py  test_product_claim_verification.py  (+12 more)
docs/: API.md  (+246 more)
(+3989 files in other folders)
