[project]
name = "hukuk-ai-api-gateway"
version = "0.1.0"
description = "AI Hukuk Asistanı Faz 1 API Gateway (Guardrails entegre)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "nemoguardrails>=0.11.0",
  "presidio-analyzer>=2.2.355",
  "presidio-anonymizer>=2.2.355",
  "pyyaml>=6.0.1",
  # Reranker — Faz 1 D-2 (cross-encoder CPU inference)
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
]
milvus = [
  "pymilvus>=2.6.0",
]

[project.scripts]
tbk-pilot = "data_pipeline.cli:main"
tbk-milvus-smoke = "data_pipeline.milvus_smoke:main"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "integration: Harici servislere (DGX, Milvus, sentence-transformers modeli vb.) bağlanan testler.",
  "longcontext: 8K üzeri context gerektiren testler."
]
